@@ -170,3 +170,11 @@ HORAS TRABALHADAS: 6h
 - bugfixes
 
 HORAS TRABALHADAS: 15h
+
+==========
+28/05/2009
+==========
+
+- bugfixes (dashboard)
+
+HORAS TRABALHADAS: 2h
